--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,16 +7,13 @@
 			<h1><a href="">Garage Blog</a></h1>			
 		</div>
 
-		<div>
-			<p>published: 08/06/17 12:09</p>
-			<h2><a href="">Mi primer post</a></h2>
-			<p>Cualquier cosa por el momento, esto es para dar parte de como se presentara la información de la base de datos en este lugar.</p>
-		</div>
+		{% for post in posts %}
+			<div>
+				<p>published : {{ post.published_date }} </p>
+				<h1><a href="">{{ post.title }}</a></h1>
+				<p> {{ post.text|linebreaksbr }} </p>
+			</div>
+		{% endfor %}
 
-		<div>
-			<p>published: 08/06/17 12:09</p>
-			<h2><a href="">Mi segundo post</a></h2>
-			<p>Cualquier cosa por el momento, esto es para dar parte de como se presentara la información de la base de datos en este lugar.</p>
-		</div>
 	</body>
 </html>
